--- a/client/src/app/presentation/presentation.component.html
+++ b/client/src/app/presentation/presentation.component.html
@@ -2,7 +2,379 @@
   <!--     *********     FEATURES 2      *********      -->
   <div
     class="features-2 section-image"
-    style="background-image: url('assets/img/backgroundBlue');"
-  ></div>
+    style="
+      background-image: url('assets/img/backgroundBlue.jpg');
+      padding-top: 142px;
+    "
+  >
+    <div class="col-md-12">
+      <div class="phone-container">
+        <img src="assets/img/cpb1.png" />
+      </div>
+    </div>
+  </div>
   <!--     *********    END FEATURES 2      *********      -->
+
+  <div class="row">
+    <div class="col-md-12">
+      <div class="info info-hover">
+        <div class="img">
+          <div class="col-md-12">
+            <div class="phone-container">
+              <img src="assets/img/bitstory.png" />
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-12">
+      <p class="description" style="color: black; text-align: center;">
+        Aqui encontraras la informacion de todos lo videjuegos como tal, desde
+        no se cual hasta el sabe que.
+        <br />
+        jsjsjsjsjsjsjsjjsjsjsjsjjsjsjsjsjsjs
+        <br />
+        jsjsjsjsjsjsjsjjsjsjsjsjjsjsjsjsjsjs
+        <br />
+        ¡Puedes separarlo por compañiassi alguna de ellas es tu favorita!
+      </p>
+    </div>
+  </div>
 </div>
+<div>
+  <ngb-carousel style="background-color: #d9c2ab !important;">
+    <ng-template ngbSlide>
+      <div
+        class="features-2 section-image"
+        style="background-color: #d9c2ab !important;"
+      >
+        <div
+          class="page-header-image"
+          style="background-image: url('assets/img/bg20.jpg');"
+        ></div>
+        <div
+          class="content-center"
+          style="background-color: #d9c2ab !important;"
+        >
+          <div class="container" style="background-color: #d9c2ab !important;">
+            <div class="">
+              <div class="row">
+                <div class="col-md-6 text-left" style="display: flex;">
+                  <div class="col-md-9 text-left">
+                    <p
+                      class="description"
+                      style="color: black; text-align: center;"
+                    ></p>
+                    <h2 class="title">
+                      1994 Playstation
+                    </h2>
+                    <h4 class="description">
+                      Lorems sdasdnsakjndsd Lorems sdasdnsakjndsd Lorems
+                      sdasdnsakjndsd.
+                    </h4>
+                  </div>
+                  <div class="img" style="width: 150px;">
+                    <img src="assets/img/play1.png" />
+                  </div>
+                </div>
+                <div class="col-md-6 text-left" style="display: flex;">
+                  <div class="col-md-9 text-left">
+                    <p
+                      class="description"
+                      style="color: black; text-align: center;"
+                    ></p>
+                    <h2 class="title">
+                      1994 Playstation
+                    </h2>
+                    <h4 class="description">
+                      Lorems sdasdnsakjndsd Lorems sdasdnsakjndsd Lorems
+                      sdasdnsakjndsd.
+                    </h4>
+                  </div>
+                  <div class="img" style="width: 150px;">
+                    <img src="assets/img/play1.png" />
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </ng-template>
+    <ng-template ngbSlide>
+      <div
+        class="features-2 section-image"
+        style="background-color: #d9c2ab !important;"
+      >
+        <div
+          class="page-header-image"
+          style="background-image: url('assets/img/bg20.jpg');"
+        ></div>
+        <div
+          class="content-center"
+          style="background-color: #d9c2ab !important;"
+        >
+          <div class="container" style="background-color: #d9c2ab !important;">
+            <div class="">
+              <div class="row">
+                <div class="col-md-6 text-left" style="display: flex;">
+                  <div class="col-md-9 text-left">
+                    <p
+                      class="description"
+                      style="color: black; text-align: center;"
+                    ></p>
+                    <h2 class="title">
+                      1994 Playstation
+                    </h2>
+                    <h4 class="description">
+                      Lorems sdasdnsakjndsd Lorems sdasdnsakjndsd Lorems
+                      sdasdnsakjndsd.
+                    </h4>
+                  </div>
+                  <div class="img" style="width: 150px;">
+                    <img src="assets/img/play1.png" />
+                  </div>
+                </div>
+                <div class="col-md-6 text-left" style="display: flex;">
+                  <div class="col-md-9 text-left">
+                    <p
+                      class="description"
+                      style="color: black; text-align: center;"
+                    ></p>
+                    <h2 class="title">
+                      1994 Playstation
+                    </h2>
+                    <h4 class="description">
+                      Lorems sdasdnsakjndsd Lorems sdasdnsakjndsd Lorems
+                      sdasdnsakjndsd.
+                    </h4>
+                  </div>
+                  <div class="img" style="width: 150px;">
+                    <img src="assets/img/play1.png" />
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </ng-template>
+    <ng-template ngbSlide>
+      <div
+        class="features-2 section-image"
+        style="background-color: #d9c2ab !important;"
+      >
+        <div
+          class="page-header-image"
+          style="background-image: url('assets/img/bg20.jpg');"
+        ></div>
+        <div
+          class="content-center"
+          style="background-color: #d9c2ab !important;"
+        >
+          <div class="container" style="background-color: #d9c2ab !important;">
+            <div class="">
+              <div class="row">
+                <div class="col-md-6 text-left" style="display: flex;">
+                  <div class="col-md-9 text-left">
+                    <p
+                      class="description"
+                      style="color: black; text-align: center;"
+                    ></p>
+                    <h2 class="title">
+                      1994 Playstation
+                    </h2>
+                    <h4 class="description">
+                      Lorems sdasdnsakjndsd Lorems sdasdnsakjndsd Lorems
+                      sdasdnsakjndsd.
+                    </h4>
+                  </div>
+                  <div class="img" style="width: 150px;">
+                    <img src="assets/img/play1.png" />
+                  </div>
+                </div>
+                <div class="col-md-6 text-left" style="display: flex;">
+                  <div class="col-md-9 text-left">
+                    <p
+                      class="description"
+                      style="color: black; text-align: center;"
+                    ></p>
+                    <h2 class="title">
+                      1994 Playstation
+                    </h2>
+                    <h4 class="description">
+                      Lorems sdasdnsakjndsd Lorems sdasdnsakjndsd Lorems
+                      sdasdnsakjndsd.
+                    </h4>
+                  </div>
+                  <div class="img" style="width: 150px;">
+                    <img src="assets/img/play1.png" />
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </ng-template>
+  </ngb-carousel>
+</div>
+
+<div
+  class="features-2 section-image pt-0 pb-0"
+  style="background-image: url('assets/img/backgroundBlack.jpg');"
+>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-md-8 mr-auto mt-0 ml-auto">
+        <h4 class="description">
+          Empresa de videjuegos
+        </h4>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-4">
+        <div class="info">
+          <img
+            class="img img-raised rounded"
+            src="assets/img/michael.jpg"
+            style="border-radius: 50% !important;"
+          />
+          <h4 class="info-title">Xbox</h4>
+          <p class="description">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde itaque
+            consequatur aut corporis.
+          </p>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="info">
+          <img
+            class="img img-raised rounded"
+            src="assets/img/michael.jpg"
+            style="border-radius: 50% !important;"
+          />
+          <h4 class="info-title">Xbox</h4>
+          <p class="description">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde itaque
+            consequatur aut corporis.
+          </p>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="info">
+          <img
+            class="img img-raised rounded"
+            src="assets/img/michael.jpg"
+            style="border-radius: 50% !important;"
+          />
+          <h4 class="info-title">Xbox</h4>
+          <p class="description">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde itaque
+            consequatur aut corporis.
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="container-fluid">
+  <div class="row p-0" style="padding-left: 5rem;">
+    <div class="col-md-3">
+      <div class="info">
+        <img
+          class="img"
+          src="assets/img/bitstory.png"
+          style="width: 102.89px; height: 149.9px;"
+        />
+      </div>
+    </div>
+    <div class="col-md-2">
+      <div class="info">
+        <img
+          class="img"
+          src="assets/img/clan club.png"
+          style="width: 102.89px; height: 149.9px;"
+        />
+      </div>
+    </div>
+    <div class="col-md-2">
+      <div class="info">
+        <img
+          class="img"
+          src="assets/img/let_s play.png"
+          style="width: 102.89px; height: 149.9px;"
+        />
+      </div>
+    </div>
+    <div class="col-md-2">
+      <div class="info">
+        <img
+          class="img"
+          src="assets/img/DLC.png"
+          style="width: 102.89px; height: 149.9px;"
+        />
+      </div>
+    </div>
+    <div class="col-md-2">
+      <div class="info">
+        <img
+          class="img"
+          src="assets/img/share.png"
+          style="width: 102.89px; height: 149.9px;"
+        />
+      </div>
+    </div>
+  </div>
+</div>
+
+<footer
+  class="footer"
+  style="background-image: url('assets/img/backgroundBlue.jpg');"
+>
+  <div class="container">
+    <div class="content">
+      <div class="row justify-content-between">
+        <div class="col-md-2">
+          <a href="#pablo" class="text-muted" style="color: white !important;">
+            Condiciones Generales
+          </a>
+        </div>
+        <div class="col-md-2">
+          <a href="#pablo" class="text-muted" style="color: white !important;">
+            Politicas De Privacidad
+          </a>
+        </div>
+        <div class="col-md-4">
+          <div class="img text-center">
+            <img src="assets/img/cpb1.png" />
+          </div>
+          <div class="row justify-content-md-center">
+            <div class="col-12 justify-content-betweenr">
+              <p
+                class="description"
+                class="text-muted copyright"
+                style="color: white !important;"
+              >
+                2020. CheckPointTour All Rigths Reserved
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-2">
+          <a href="#pablo" class="text-muted" style="color: white !important;">
+            Contacto
+          </a>
+        </div>
+        <div class="col-md-2">
+          <a href="#pablo" class="text-muted" style="color: white !important;">
+            Publicidad
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+</footer>
