--- a/client/src/app/sections/sections.component.html
+++ b/client/src/app/sections/sections.component.html
@@ -1,11 +1,221 @@
 <div class="wrapper">
-    <div class="section-space"></div>
-    <app-headers></app-headers>
-    <app-features></app-features>
-    <app-blogs></app-blogs>
-    <app-teams></app-teams>
-    <app-projects></app-projects>
-    <app-pricing></app-pricing>
-    <app-testimonials></app-testimonials>
-    <app-contacts></app-contacts>
+  <!--     *********     FEATURES 2      *********      -->
+  <div
+    class="features-2 section-image"
+    style="
+      background-image: url('assets/img/backgroundBlue.jpg');
+      padding-top: 142px;
+    "
+  >
+    <div class="col-md-12">
+      <div class="phone-container">
+        <img src="assets/img/cpb2.png" />
+      </div>
+    </div>
+  </div>
+  <ngb-alert
+    type="danger"
+    [dismissible]="false"
+    style="margin-bottom: 0px; padding: 3px; background-color: #1fb8cf;"
+  >
+    <div class="container">
+      <div class="alert-wrapper">
+        Blog
+        <i class="now-ui-icons arrows-1_minimal-right"></i>
+        Overwatch
+        <i class="now-ui-icons arrows-1_minimal-right"></i>
+        Logros
+      </div>
+    </div>
+  </ngb-alert>
+
+  <div>
+    <div class="row mt-5 ml-3">
+      <div class="col-md-12">
+        <div class="media">
+          <a class="pull-left" href="#pablo">
+            <div class="avatar">
+              <img
+                class="media-object img-raised"
+                alt="77x77"
+                src="assets/img/james.jpg"
+                style="width: 77px;"
+              />
+            </div>
+          </a>
+          <div class="media-body">
+            <h5 class="media-heading">
+              Lazaro
+              <small style="color: black;"
+                >&middot; A expuesto un nuevo logro</small
+              >
+            </h5>
+            <p style="text-align: initial;">
+              <img src="assets/img/1.png" />
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row mt-3 ml-3">
+      <div class="col-md-12" style="text-align: center;">
+        <div class="media">
+          <a class="pull-center" href="#pablo">
+            <div class="avatar" style="margin-left: 150px;">
+              <img
+                class="media-object img-raised"
+                alt="77x77"
+                src="assets/img/james.jpg"
+                style="width: 77px;"
+              />
+            </div>
+          </a>
+          <div class="media-body">
+            <h5 class="media-heading" style="width: fit-content;">
+              Lazaro
+              <small style="color: black;"
+                >&middot; A expuesto un nuevo logro</small
+              >
+            </h5>
+            <p style="text-align: initial;">
+              <img src="assets/img/1.png" />
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="row justify-content-md-center">
+    <div class="col-md-4">
+      <h4 class="text-center">
+        Post your comment
+      </h4>
+      <div class="media media-post">
+        <a class="pull-left author" href="#pablo">
+          <div class="avatar">
+            <img
+              class="media-object img-raised"
+              alt="64x64"
+              src="assets/img/placeholder.jpg"
+            />
+          </div>
+        </a>
+        <div class="media-body">
+          <form class="form">
+            <div class="row">
+              <div class="col-md-6">
+                <div class="form-group">
+                  <input
+                    type="text"
+                    class="form-control"
+                    placeholder="Your Name"
+                  />
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="form-group">
+                  <input
+                    type="email"
+                    class="form-control"
+                    placeholder="Your email"
+                  />
+                </div>
+              </div>
+            </div>
+            <textarea
+              class="form-control"
+              placeholder="Write a nice reply or go home"
+              rows="6"
+            ></textarea>
+            <div class="media-footer">
+              <h6 class="text-muted">Sign in with</h6>
+              <a href="" class="btn btn-icon btn-round btn-twitter">
+                <i class="fa fa-twitter"></i>
+              </a>
+              <a href="" class="btn btn-icon btn-round btn-facebook">
+                <i class="fa fa-facebook-square"></i>
+              </a>
+              <a href="" class="btn btn-icon btn-round btn-google">
+                <i class="fa fa-google-plus-square"></i>
+              </a>
+              <a
+                href="#pablo"
+                class="btn pull-right"
+                style="background-color: #7b9fa0 !important;"
+                >Post Comment</a
+              >
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <footer
+    class="footer pt-5"
+    style="
+      background-image: url('assets/img/backgroundBlue.jpg');
+      margin-top: 80px;
+    "
+  >
+    <div class="container">
+      <div class="content">
+        <div class="row justify-content-between">
+          <div class="col-md-2">
+            <a
+              href="#pablo"
+              class="text-muted"
+              style="color: white !important;"
+            >
+              Condiciones Generales
+            </a>
+          </div>
+          <div class="col-md-2">
+            <a
+              href="#pablo"
+              class="text-muted"
+              style="color: white !important;"
+            >
+              Politicas De Privacidad
+            </a>
+          </div>
+          <div class="col-md-4">
+            <div class="img text-center">
+              <img src="assets/img/cpb1.png" />
+            </div>
+            <div class="row justify-content-md-center">
+              <div class="col-12 justify-content-betweenr">
+                <p
+                  class="description"
+                  class="text-muted copyright"
+                  style="color: white !important;"
+                >
+                  2020. CheckPointTour All Rigths Reserved
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-2">
+            <a
+              href="#pablo"
+              class="text-muted"
+              style="color: white !important;"
+            >
+              Contacto
+            </a>
+          </div>
+          <div class="col-md-2">
+            <a
+              href="#pablo"
+              class="text-muted"
+              style="color: white !important;"
+            >
+              Publicidad
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
 </div>
