Add two views, some tweaks and some format

--- a/client/src/app/shared/navbar/navbar.component.html
+++ b/client/src/app/shared/navbar/navbar.component.html
@@ -7,9 +7,8 @@
     <div class="navbar-translate">
       <a
         class="navbar-brand"
-        [routerLink]="['/presentation']"
+        [routerLink]="['/bitstory']"
         placement="bottom"
-        ngbTooltip="Designed by Invision. Coded by Creative Tim"
       >
         <div class="img text-left">
           <img src="assets/img/checkpoint marca2.png" />
