Add videogame company logos

--- a/client/src/app/presentation/presentation.component.html
+++ b/client/src/app/presentation/presentation.component.html
@@ -237,11 +237,7 @@ style="background-image: url('assets/img/backgroundBlack.jpg');"
   <div class="row">
     <div class="col-md-4">
       <div class="info">
-        <img
-        class="img img-raised rounded"
-        src="assets/img/michael.jpg"
-        style="border-radius: 50% !important;"
-        />
+        <img class="img img-raised rounded-circle" src="assets/img/xbox-logo.png"/>
         <h4 class="info-title">Xbox</h4>
         <p class="description">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde itaque
@@ -251,12 +247,8 @@ style="background-image: url('assets/img/backgroundBlack.jpg');"
     </div>
     <div class="col-md-4">
       <div class="info">
-        <img
-        class="img img-raised rounded"
-        src="assets/img/michael.jpg"
-        style="border-radius: 50% !important;"
-        />
-        <h4 class="info-title">Xbox</h4>
+        <img class="img img-raised rounded-circle" src="assets/img/playstation-logo.jpg"/>
+        <h4 class="info-title">PlayStation</h4>
         <p class="description">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde itaque
           consequatur aut corporis.
@@ -265,12 +257,8 @@ style="background-image: url('assets/img/backgroundBlack.jpg');"
     </div>
     <div class="col-md-4">
       <div class="info">
-        <img
-        class="img img-raised rounded"
-        src="assets/img/michael.jpg"
-        style="border-radius: 50% !important;"
-        />
-        <h4 class="info-title">Xbox</h4>
+        <img class="img img-raised rounded-circle" src="assets/img/nintendo-logo.jpg"/>
+        <h4 class="info-title">Nintendo</h4>
         <p class="description">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde itaque
           consequatur aut corporis.
