--- a/client/src/assets/sass/now-ui-kit/_pagination.scss
+++ b/client/src/assets/sass/now-ui-kit/_pagination.scss
@@ -25,8 +25,9 @@
     }
 
     .page-item.active > .page-link{
-        color: $light-gray;
-        box-shadow: 0px 5px 25px 0px rgba(0, 0, 0, 0.2);
+        color: $primary-color;
+        border: solid 2px $primary-color;
+        border-radius: 3px;
 
         &,
         &:focus,
