Tweaks, probably final version

--- a/client/src/app/components/components.component.html
+++ b/client/src/app/components/components.component.html
@@ -9,7 +9,7 @@
   >
     <div class="col-md-12">
       <div class="phone-container">
-        <img src="assets/img/cpb2.png" />
+        <img src="assets/img/cpb2.png" style="max-width: 49%"/>
       </div>
     </div>
   </div>
@@ -74,7 +74,7 @@
         <div class="img">
           <div class="col-md-12">
             <div class="phone-container">
-              <img src="assets/img/gold.png" />
+              <img src="assets/img/gold.png" style="max-width: 49%"/>
             </div>
           </div>
         </div>
@@ -127,10 +127,8 @@
       <div class="col-md-2">
         <div class="info">
           <img
-            class="img img-raised rounded"
-            src="assets/img/michael.jpg"
-            style="border-radius: 50% !important;"
-          />
+            class="img-fluid img-raised rounded-circle"
+            src="assets/img/michael.jpg"/>
           <h4 class="info-title">Valentine</h4>
           <h6 class="info-title" class="text-muted">Web Designer</h6>
           <p class="description">
@@ -142,10 +140,8 @@
       <div class="col-md-2">
         <div class="info">
           <img
-            class="img img-raised rounded"
-            src="assets/img/michael.jpg"
-            style="border-radius: 50% !important;"
-          />
+            class="img-fluid img-raised rounded-circle"
+            src="assets/img/emily.jpg"/>
           <h4 class="info-title">Frida</h4>
           <h6 class="info-title" class="text-muted">Ilustradora</h6>
           <p class="description">
@@ -157,11 +153,9 @@
       <div class="col-md-2">
         <div class="info">
           <img
-            class="img img-raised rounded"
-            src="assets/img/michael.jpg"
-            style="border-radius: 50% !important;"
-          />
-          <h4 class="info-title">Valentine</h4>
+            class="img-fluid img-raised rounded-circle"
+            src="assets/img/julie.jpg"/>
+          <h4 class="info-title">Yami</h4>
           <h6 class="info-title" class="text-muted">Graphic Designer</h6>
           <p class="description">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde itaque
