--- a/client/src/app/presentation/presentation.component.html
+++ b/client/src/app/presentation/presentation.component.html
@@ -1,72 +1,43 @@
 <div class="wrapper">
   <!--     *********     FEATURES 2      *********      -->
-  <div
-  class="features-2 section-image"
-  style="
-  background-image: url('assets/img/backgroundBlue.jpg');
-  padding-top: 142px;
-  "
-  >
-  <div class="col-md-12">
-    <div class="phone-container">
-      <img src="assets/img/cpb1.png" />
-    </div>
-  </div>
-</div>
+  <div class="features-2 section-image" style="background-image: url('assets/img/backgroundBlue.jpg'); padding-top: 142px;">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-8 offset-lg-2">
+          <img src="assets/img/cpb1.png" class="img-fluid"/>
+        </div>
+      </div>
+    </div>    
+  </div>    
 <!--     *********    END FEATURES 2      *********      -->
-
-<div class="row">
-  <div class="col-md-12">
-    <div class="info info-hover">
-      <div class="img">
-        <div class="col-md-12">
-          <div class="phone-container">
-            <img src="assets/img/bitstory.png" />
-          </div>
-        </div>
+  <section id="bitstory" class="py-5">
+    <div class="row">
+      <div class="col-md-2 offset-md-5">
+        <img src="assets/img/bitstory.png" class="img-fluid"/>
       </div>
     </div>
-  </div>
-</div>
-<div class="row">
-  <div class="col-md-12">
-    <p class="description" style="color: black; text-align: center;">
-      Aqui encontraras la informacion de todos lo videjuegos como tal, desde
-      no se cual hasta el sabe que.
-      <br />
-      jsjsjsjsjsjsjsjjsjsjsjsjjsjsjsjsjsjs
-      <br />
-      jsjsjsjsjsjsjsjjsjsjsjsjjsjsjsjsjsjs
-      <br />
-      ¡Puedes separarlo por compañiassi alguna de ellas es tu favorita!
-    </p>
-  </div>
-</div>
-</div>
-<div>
-  <ngb-carousel style="background-color: #d9c2ab !important;">
-    <ng-template ngbSlide>
-      <div
-      class="features-2 section-image"
-      style="background-color: #d9c2ab !important;"
-      >
-      <div
-      class="page-header-image"
-      style="background-image: url('assets/img/bg20.jpg');"
-      ></div>
-      <div
-      class="content-center"
-      style="background-color: #d9c2ab !important;"
-      >
-      <div class="container" style="background-color: #d9c2ab !important;">
-        <div class="">
-          <div class="row">
-            <div class="col-md-6 text-left" style="display: flex;">
-              <div class="col-md-9 text-left">
-                <p
-                class="description"
-                style="color: black; text-align: center;"
-                ></p>
+    <div class="row">
+      <div class="col-md-12">
+        <p class="description" style="color: black; text-align: center;">
+          Aqui encontraras la informacion de todos lo videjuegos como tal, desde
+          no se cual hasta el sabe que.
+          <br />
+          jsjsjsjsjsjsjsjjsjsjsjsjjsjsjsjsjsjs
+          <br />
+          jsjsjsjsjsjsjsjjsjsjsjsjjsjsjsjsjsjs
+          <br />
+          ¡Puedes separarlo por compañiassi alguna de ellas es tu favorita!
+        </p>
+      </div>
+    </div>
+  </section>
+  <div>
+    <ngb-carousel style="background-color: #d9c2ab !important;" class="p-5">
+      <ng-template ngbSlide> <!-- repite este elemento -->
+        <div class="row">
+          <div class="col-6">
+            <div class="row">
+              <div class="col-6">
                 <h2 class="title">
                   1994 Playstation
                 </h2>
@@ -75,16 +46,14 @@
                   sdasdnsakjndsd.
                 </h4>
               </div>
-              <div class="img" style="width: 150px;">
-                <img src="assets/img/play1.png" />
+              <div class="col-6">
+                <img src="assets/img/play1.png" class="img-fluid"/>
               </div>
             </div>
-            <div class="col-md-6 text-left" style="display: flex;">
-              <div class="col-md-9 text-left">
-                <p
-                class="description"
-                style="color: black; text-align: center;"
-                ></p>
+          </div>
+          <div class="col-6">
+            <div class="row">
+              <div class="col-6">
                 <h2 class="title">
                   1994 Playstation
                 </h2>
@@ -93,133 +62,15 @@
                   sdasdnsakjndsd.
                 </h4>
               </div>
-              <div class="img" style="width: 150px;">
-                <img src="assets/img/play1.png" />
+              <div class="col-6">
+                <img src="assets/img/play1.png" class="img-fluid"/>
               </div>
             </div>
           </div>
         </div>
-      </div>
-    </div>
+      </ng-template>
+    </ngb-carousel>
   </div>
-</ng-template>
-<ng-template ngbSlide>
-  <div
-  class="features-2 section-image"
-  style="background-color: #d9c2ab !important;"
-  >
-  <div
-  class="page-header-image"
-  style="background-image: url('assets/img/bg20.jpg');"
-  ></div>
-  <div
-  class="content-center"
-  style="background-color: #d9c2ab !important;"
-  >
-  <div class="container" style="background-color: #d9c2ab !important;">
-    <div class="">
-      <div class="row">
-        <div class="col-md-6 text-left" style="display: flex;">
-          <div class="col-md-9 text-left">
-            <p
-            class="description"
-            style="color: black; text-align: center;"
-            ></p>
-            <h2 class="title">
-              1994 Playstation
-            </h2>
-            <h4 class="description">
-              Lorems sdasdnsakjndsd Lorems sdasdnsakjndsd Lorems
-              sdasdnsakjndsd.
-            </h4>
-          </div>
-          <div class="img" style="width: 150px;">
-            <img src="assets/img/play1.png" />
-          </div>
-        </div>
-        <div class="col-md-6 text-left" style="display: flex;">
-          <div class="col-md-9 text-left">
-            <p
-            class="description"
-            style="color: black; text-align: center;"
-            ></p>
-            <h2 class="title">
-              1994 Playstation
-            </h2>
-            <h4 class="description">
-              Lorems sdasdnsakjndsd Lorems sdasdnsakjndsd Lorems
-              sdasdnsakjndsd.
-            </h4>
-          </div>
-          <div class="img" style="width: 150px;">
-            <img src="assets/img/play1.png" />
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-</div>
-</ng-template>
-<ng-template ngbSlide>
-  <div
-  class="features-2 section-image"
-  style="background-color: #d9c2ab !important;"
-  >
-  <div
-  class="page-header-image"
-  style="background-image: url('assets/img/bg20.jpg');"
-  ></div>
-  <div
-  class="content-center"
-  style="background-color: #d9c2ab !important;"
-  >
-  <div class="container" style="background-color: #d9c2ab !important;">
-    <div class="">
-      <div class="row">
-        <div class="col-md-6 text-left" style="display: flex;">
-          <div class="col-md-9 text-left">
-            <p
-            class="description"
-            style="color: black; text-align: center;"
-            ></p>
-            <h2 class="title">
-              1994 Playstation
-            </h2>
-            <h4 class="description">
-              Lorems sdasdnsakjndsd Lorems sdasdnsakjndsd Lorems
-              sdasdnsakjndsd.
-            </h4>
-          </div>
-          <div class="img" style="width: 150px;">
-            <img src="assets/img/play1.png" />
-          </div>
-        </div>
-        <div class="col-md-6 text-left" style="display: flex;">
-          <div class="col-md-9 text-left">
-            <p
-            class="description"
-            style="color: black; text-align: center;"
-            ></p>
-            <h2 class="title">
-              1994 Playstation
-            </h2>
-            <h4 class="description">
-              Lorems sdasdnsakjndsd Lorems sdasdnsakjndsd Lorems
-              sdasdnsakjndsd.
-            </h4>
-          </div>
-          <div class="img" style="width: 150px;">
-            <img src="assets/img/play1.png" />
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-</div>
-</ng-template>
-</ngb-carousel>
 </div>
 
 <div
@@ -237,7 +88,7 @@ style="background-image: url('assets/img/backgroundBlack.jpg');"
   <div class="row">
     <div class="col-md-4">
       <div class="info">
-        <img class="img img-raised rounded-circle" src="assets/img/xbox-logo.png"/>
+        <img style="max-width: 70%; margin: 0 auto; display: block" class="img-raised rounded-circle" src="assets/img/xbox-logo.png"/>
         <h4 class="info-title">Xbox</h4>
         <p class="description">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde itaque
@@ -247,7 +98,7 @@ style="background-image: url('assets/img/backgroundBlack.jpg');"
     </div>
     <div class="col-md-4">
       <div class="info">
-        <img class="img img-raised rounded-circle" src="assets/img/playstation-logo.jpg"/>
+        <img style="max-width: 70%; margin: 0 auto; display: block" class="img-raised rounded-circle" src="assets/img/playstation-logo.jpg"/>
         <h4 class="info-title">PlayStation</h4>
         <p class="description">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde itaque
@@ -257,7 +108,7 @@ style="background-image: url('assets/img/backgroundBlack.jpg');"
     </div>
     <div class="col-md-4">
       <div class="info">
-        <img class="img img-raised rounded-circle" src="assets/img/nintendo-logo.jpg"/>
+        <img style="max-width: 70%; margin: 0 auto; display: block" class="img-raised rounded-circle" src="assets/img/nintendo-logo.jpg"/>
         <h4 class="info-title">Nintendo</h4>
         <p class="description">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde itaque
