--- a/client/src/app/store/store.component.html
+++ b/client/src/app/store/store.component.html
@@ -6,11 +6,11 @@
         <div class="text-center text-light col-lg-2">Servicios</div>
         <div class="text-center text-light col-lg-4">
           <div class="form-inline">
-            <input type="text" class="form-control">
-            <i class="now-ui-icons ui-1_zoom-bold"></i>
+            <input type="text" class="form-control mr-2" style="width: 24em;">
+            <img src="assets/img/search-light.png" alt="Buscar" class="d-inline-block" style="height: 2em; width: 2em;">
           </div>
         </div>
-        <div class="text-center text-light col-lg-4">
+        <div class="text-center text-light col-lg-4 border-left">
           <i class="now-ui-icons ui-2_favourite-28"></i>
           Lista de deseos
         </div>
