--- a/client/src/assets/sass/now-ui-kit/_variables.scss
+++ b/client/src/assets/sass/now-ui-kit/_variables.scss
@@ -193,6 +193,7 @@ $transition-ease:           ease 0s;
 
 //$navbar-padding-a:               9px 13px;
 $navbar-margin-a:                15px 0px;
+$navbar-brand-height:            4em;
 
 $padding-social-a:               10px 5px;
 
