--- a/client/src/app/shared/navbar/navbar.component.html
+++ b/client/src/app/shared/navbar/navbar.component.html
@@ -1,66 +1,19 @@
-<nav
-  class="navbar navbar-expand-lg bg-white fixed-top p-0"
-  color-on-scroll="0"
-  style="background-color: white !important;"
->
-  <div class="container">
-    <div class="navbar-translate">
-      <a
-        class="navbar-brand"
-        [routerLink]="['/bitstory']"
-        placement="bottom"
-      >
-        <div class="img text-left">
-          <img src="assets/img/checkpoint marca2.png" />
+<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top p-0" style="background-color: white !important;">
+  <div class="container-fluid">
+    <a class="navbar-brand" [routerLink]="['/bitstory']" placement="bottom">
+      <img src="assets/img/checkpoint marca2.png" height="75" class="d-inline-block align-bottom"/>
+      <i class="now-ui-icons arrows-1_minimal-down align-middle h2 ml-4 text-dark"></i>
+    </a>
+    <div class="mr-0 ml-auto">
+      <div class="d-inline-block">
+        <div class="form-inline mr-4">
+          <input type="text" value="" placeholder="Search" class="form-control" style="border-radius: 8px"/>
+          <img class="pt-1" src="assets/img/what.png" style="width: 24px; height: 24px;" />
         </div>
-      </a>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-toggle="collapse"
-        data-target="#navbarToggler"
-        aria-controls="navbarTogglerDemo02"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-        (click)="sidebarToggle()"
-      >
-        <span class="navbar-toggler-bar bar1"></span>
-        <span class="navbar-toggler-bar bar2"></span>
-        <span class="navbar-toggler-bar bar3"></span>
-      </button>
-    </div>
-
-    <div class="navbar-brand col-sm-3 col-lg-3 pb-0">
-      <div class="form-group mb-0 d-flex">
-        <input
-          type="Search"
-          value=""
-          placeholder="Search"
-          class="form-control"
-        />
-        <img
-          class="pt-1"
-          src="assets/img/what.png"
-          style="width: 24px; height: 24px;"
-        />
       </div>
-    </div>
-    <div class="d-flex">
-      <a
-        class="nav-item dropdown navbar-brand"
-        style="
-          font-size: 1.5rem;
-          display: inline;
-          padding-top: 23px;
-          color: #50569e;
-        "
-      >
-        Mi-Cuenta
+      <a href="#" class="nav-link text-primary d-inline-block pt-2" style="font-size: 1.4em">
+        Mi cuenta <i class="now-ui-icons arrows-1_minimal-down align-baseline" style="font-size: 0.7em"></i>
       </a>
-      <img
-        src="assets/img/flecha.png"
-        style="width: 24px; height: 24px; margin-top: 20px;"
-      />
     </div>
   </div>
 </nav>
